src/main/java/com/test/coursemanagementspring/core/common/errors/UndefinedEntityException.java
package com.test.coursemanagementspring.core.common.errors;

public class UndefinedEntityException extends RuntimeException {
    public UndefinedEntityException(String message) {
        super(message);
    }
}
